--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-copy-of-advanced-sports-clock",
+  "name": "copy-of-copy-of-copy-of-advanced-sports-clock---אחרון-עובד",
   "private": true,
   "version": "0.0.0",
   "type": "module",
