feat: Update project name and add cache clearing for exercises
Updates the project name across configuration files to reflect the correct application name: "Copy of Copy of Copy of Copy of Advanced Sports Clock - אחרון עם סרטונים עובדים".

Introduces a new function `clearExerciseFromCache` in `geminiService.ts` to allow clearing specific exercise data from the localStorage cache. This is utilized in `WorkoutMenu.tsx` within the `ExerciseInfoModal` to ensure fresh data is fetched when the modal is re-opened or when an exercise might have outdated information.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-copy-of-copy-of-advanced-sports-clock---אחרון-עובד",
+  "name": "copy-of-copy-of-copy-of-copy-of-advanced-sports-clock---אחרון-עם-סרטונים-עובדים",
   "private": true,
   "version": "0.0.0",
   "type": "module",
