feat: Integrate Firebase for Google authentication
This commit lays the groundwork for Google account integration by introducing Firebase as a dependency. It also refactors the application to wrap the main content in an `AuthProvider`, preparing it to handle authentication state and logic.

Additionally, local storage mechanisms for settings and workout plans have been refactored to utilize a new `storageService`, improving modularity and maintainability.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-copy-of-advanced-sports-clock---אחרון-לפני-הוספת-מסד-נתונים-היברידי",
+  "name": "copy-of-copy-of-copy-of-advanced-sports-clock---אחרון-לפני-הוספת-מסד-נתונים-היברידי",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,8 @@
     "react-dom": "^19.1.1",
     "@google/genai": "^1.16.0",
     "react": "^19.1.1",
-    "@vercel/kv": "^3.0.0"
+    "@vercel/kv": "^3.0.0",
+    "firebase": "^12.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
