feat: Refactor state management and component structure
This commit introduces significant refactoring to improve the application's state management and component organization.

Key changes include:
- Introduction of `useStopwatch` and `useCountdown` hooks to encapsulate timer logic.
- Restructuring `App.tsx` to leverage these new hooks and providers for better separation of concerns.
- Updating `package.json` and `index.html` to reflect dependency changes and ensure correct script loading.
- Minor adjustments to `metadata.json` and `README.md`.
- Enhancements to `Controls.tsx` and `SettingsMenu.tsx` for improved user interaction and configuration.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-copy-of-copy-of-copy-of-copy-of-advanced-sports-clock---אחרון-לפני-הוספת-מסד-נתונים-היברידי",
+  "name": "copy-of-copy-of-copy-of-advanced-sports-clock---אחרון-לפני-הוספת-מסד-נתונים-היברידי",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,10 +13,7 @@
     "@google/genai": "^1.16.0",
     "react": "^19.1.1",
     "@vercel/kv": "^3.0.0",
-    "firebase": "^12.2.1",
-    "@firebase/app": "^0.14.3",
-    "@firebase/auth": "^1.11.0",
-    "@firebase/firestore": "^4.9.2"
+    "firebase": "^12.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
